<?xml version="1.0"?>
<package>
  <name>toad_bringup</name>
  <version>0.0.2</version>
  <description>toad_bringup</description>

  <maintainer email="imaterna@fit.vutbr.cz">Zdenek Materna</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>p2os_driver</build_depend>
  <build_depend>p2os_launch</build_depend>
  <build_depend>p2os_urdf</build_depend>
  <build_depend>robot_pose_ekf</build_depend>
  <build_depend>microstrain_3dm_gx3_45</build_depend>
  <build_depend>stereo_image_proc</build_depend>
  <!--build_depend>but_velodyne_proc</build_depend-->
  <build_depend>toad_utils</build_depend>
  
  <run_depend>p2os_driver</run_depend>
  <run_depend>p2os_launch</run_depend>
  <run_depend>p2os_urdf</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>microstrain_3dm_gx3_45</run_depend>
  <run_depend>stereo_image_proc</run_depend>
  <!--run_depend>but_velodyne_proc</run_depend-->
  <run_depend>toad_utils</run_depend>

</package>

