<?xml version="1.0"?>
<package>
  <name>toad_description</name>
  <version>0.0.2</version>
  <description>toad_description</description>

  <maintainer email="imaterna@fit.vutbr.cz">Zdenek Materna</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>p2os_urdf</build_depend>
  
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>p2os_urdf</run_depend>

</package>
