<?xml version="1.0"?>
<package>
  <name>toad_gazebo</name>
  <version>0.0.1</version>
  <description>toad_gazebo</description>

  <maintainer email="imaterna@fit.vutbr.cz">Zdenek Materna</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!--build_depend>but_interaction_primitives</build_depend-->
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>hector_gazebo_plugins</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>

</package>
