<?xml version="1.0"?>
<package>
  <name>toad_navigation_global</name>
  <version>0.0.2</version>
  <description>toad_navigation_global</description>

  <maintainer email="imaterna@fit.vutbr.cz">Zdenek Materna</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>move_base</build_depend>
  
  <run_depend>move_base</run_depend>

</package>
